add controllers/user.js and models/user.js

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<form class="container">
     <h1 class="text-center">Todo list</h1>
     <div class="new-task col-md-4 col-sm-12 p-3" action="" class="form" method="POST">
         <div class="input-group">
@@ -7,6 +7,6 @@
             <input class="new-task__add btn btn-primary" type="button" value="Add">
         </div>
     </div>
-</div>
+</form>
 
 <div class="task-list col-md-6"></div>
